# test-django-vite

./: .gitignore  README.md  flake.nix  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  vite.config.js
passport/config/: asgi.py  urls.py  wsgi.py
passport/config/settings/: __init__.py
passport/templates/: index.html
