[tool.poetry]
name = "test-django-vite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "passport"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
django-vite-plugin = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
